# banking

./: .env.example  .gitignore  CLAUDE.md  README.md  account.py  belfius.py  docker-compose.db-revision.yml  docker-compose.dev.yml  docker-compose.yml  prod.env.example  stop-dev-env.sh  tagger.py  tags.py  transaction.py
backend/: Dockerfile  alembic.ini  pyproject.toml
belfius/: belfius.py
data/: tags.json
docs/: requirements.md
frontend/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.old  (+8 more)
v2/backend/: Dockerfile  pyproject.toml
v2/backend/app/: config.py  dependencies.py  main.py
v2/backend/app/migrations/: env.py
v2/backend/app/migrations/versions/: 0001_baseline.py  0002_add_transaction_groups.py  0003_category_splits.py
v2/backend/app/ml/: feature_extractor.py  stopwords.py  trainer.py
v2/backend/app/models/: __init__.py  account.py  category_split.py  currency.py  expense_split.py  import_record.py  ml_model.py  recurring_pattern.py  transaction.py  transaction_group.py  wallet.py
v2/backend/app/parsers/: belfius.py  ing.py
v2/backend/app/routers/: accounts.py  auth.py  categories.py  imports.py  ml.py  tag_rules.py  transaction_groups.py  transactions.py  wallet_stats.py  wallets.py
v2/backend/app/schemas/: account.py  auth.py  ml.py  tag_rule.py  transaction.py  transaction_group.py  wallet.py  wallet_stats.py
v2/backend/app/services/: category_service.py  import_service.py  tag_rule_service.py
v2/backend/app/tasks/: scheduler.py
v2/backend/app/utils/: wallet.py
v2/backend/tests/: conftest.py  test_accounts.py  test_auth.py  test_categories.py  test_effective_amount_stats.py  test_imports.py  test_ml.py  test_parsers.py  test_tag_rules.py  test_transaction_groups.py  test_transactions.py  test_wallet_stats.py  test_wallets.py
v2/backend/tests/fixtures/: ing_sample.csv
v2/migration/: migrate.py  pyproject.toml  requirements.txt
(+432 files in other folders)
